fix word-spacing

--- a/source/sass/blocks/media.scss
+++ b/source/sass/blocks/media.scss
@@ -156,6 +156,7 @@
     line-height: 61px;
     max-width: 470px;
     margin: 0 auto;
+    word-spacing: 250px;
   }
 
   .inner {
@@ -352,6 +353,7 @@
     line-height: 42px;
     max-width: 298px;
     margin: 0 auto;
+    word-spacing: 150px;
   }
 
   .description {
